# NITK_Knowledge_Distiller_App

./: README.md  pyproject.toml  todo.txt
artifacts/demo/: video_link.txt
code/: .gitignore  app.py  utils.py
code/data/: data.txt  formatted_graph_documents.txt  formatted_graph_documents2.txt  test.txt
code/frontend/: package-lock.json  package.json
code/frontend/src/: AboutUs.jsx  App.jsx  GenerateChat.jsx  Graph.jsx  Navbar.jsx  SideNavbar.jsx  SignIn.jsx  SignUpPage.jsx  UploadButton.jsx  api.js  featureSection.jsx  main.jsx  upload.jsx
code/genAI/: graph.py
code/preprocessing/: audio.py  utils.py
